# Kyma-Music

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Features_and_Updates_Missing.md  LICENSE  READme.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  bump-version.sh  makefile  package-lock.json  zustand
.github/workflows/: build.yml  ci.yml
Kyma_Backend/: .gitignore  Cargo.toml  tauri.conf.json
Kyma_Backend/capabilities/: default.json
Kyma_Backend/icons/: icon.icns
Kyma_Backend/migration/: 001_init.sql
Kyma_Backend/src/: error.rs  lib.rs  logging.rs  main.rs  remote_server.rs  stream_server.rs  tray.rs
Kyma_Backend/src/audio/: decoder.rs  engine.rs  http_reader.rs  mod.rs  output.rs
Kyma_Backend/src/commands/: artists.rs  history.rs  library.rs  likes.rs  logs.rs  lyrics.rs  metadata.rs  metadata_providers.rs  mod.rs  notifications.rs  player.rs  playlist.rs  prefetch.rs  radio.rs  settings.rs  soundcloud.rs  updates.rs  youtube.rs
Kyma_Backend/src/models/: song.rs
Kyma_Backend/src/state/: app_state.rs
Kyma_Backend/src/tests/: cache_tests.rs  db_fixtures.rs  db_migration_tests.rs  delete_song_tests.rs  duration_tests.rs  likes_persistence_tests.rs  metadata_tests.rs  mod.rs  mpv_engine_tests.rs  mpv_test.rs  player_tests.rs  playlist_integration_tests.rs  queue_tests.rs  search_query_tests.rs  token_tests.rs  youtube_integration_tests.rs  youtube_tests.rs
Kyma_Backend/tests/fixtures/: mock-yt-dlp
Kyma_Frontend/: index.html  package-lock.json  package.json  vite.config.ts
Kyma_Frontend/remote/: index.html
Kyma_Frontend/src/: App.tsx  AppRoutes.tsx  main.tsx
Kyma_Frontend/src/core/entities/: Song.ts
Kyma_Frontend/src/core/repositories/: IPlayerRepository.ts
Kyma_Frontend/src/infrastructure/: TauriPlayerRepository.ts  TauriSongRepository.ts
Kyma_Frontend/src/lib/: butterchurn-presets-shim.ts  formatTime.ts
Kyma_Frontend/src/presentation/components/: AudioVisualizer.tsx  ErrorBoundary.tsx  ListeningLineChart.tsx
Kyma_Frontend/src/presentation/hooks/: PlayerContext.tsx  useLibrary.ts  usePlayer.ts  usePrefetchQueue.ts  useUpdater.ts
Kyma_Frontend/src/services/: logger.ts  tauriBridge.ts
Kyma_Frontend/src/styles/: globals.css  globals.css.bak2  globals.css.bak3  globals.css.bak4
scripts/: README-WINDOWS.txt  bundle-windows.ps1  bundle.sh  download-latest-mpv.sh  run-kyma.bat
(+50 files in other folders)
