[package]
name = "kyma"
version = "1.1.5"
edition = "2021"
license = "MIT"
authors = ["Neontoshi"]
description = "Music flows freely."
repository = "https://github.com/Neontoshi/Kyma-Music"
homepage = "https://github.com/Neontoshi/Kyma-Music"
keywords = ["music", "player", "tauri", "streaming", "audio"]
categories = ["multimedia", "audio"]

[lib]
name = "kyma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kyma"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2.5.1"

#  Audio engine (Symphonia + CPAL)
cpal = "0.15"
rubato = "0.15"
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "ogg",
    "flac",
    "wav",
    "isomp4",
    "mkv",
    "all-codecs",
] }

# Metadata
lofty = "0.22"
mp3-duration = "0.1"
mp4ameta = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Web / streaming
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Filesystem
walkdir = "2"
dirs = "5"

# Errors
thiserror = "1"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Images
image = "0.24"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC / utils
once_cell = "1"
parking_lot = "0.12"

# Time
chrono = "0.4"
rustfft = "6"

#  Platform-specific

# Linux: ALSA headers needed by CPAL
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

# Windows: nothing extra needed — CPAL uses WASAPI which is built-in
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32"] }
rustfft = "6"
